--- a/src/containers/Home/style.css
+++ b/src/containers/Home/style.css
@@ -1,8 +1,12 @@
-body {
-  background: green;
+.container {
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
-.test {
-  margin-top: 50px;
-  background: red;
+.item {
+  line-height: 34px;
+  font-size: 16px;
+}
+.item > a {
+  color: #666;
 }
